blazegraph/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
  name: blazegraph
  namespace: nexus18-research
spec:
  tls:
    - hosts:
        - nexus.camh.ca
      secretName: wc.camh.ca
  rules:
    - host: nexus.camh.ca
      http:
        paths:
          - backend:
              service:
                name: blazegraph
                port:
                  number: 9999
            path: /blazegraph
            pathType: Prefix
